--- a/src/app/views/features/lead/view-lead/view-lead.component.html
+++ b/src/app/views/features/lead/view-lead/view-lead.component.html
@@ -105,7 +105,7 @@
                   </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-6 mt-5">
-                  <ng-container *ngIf="status_value!=='已轉換'">
+                  <ng-container *ngIf="status_value==='發展中'">
                     <p-button pTooltip="轉換" (click)="showDialog()" tooltipPosition="top" icon="pi pi-sync"
                               styleClass="p-button-rounded p-button-secondary p-button-text p-button-lg "></p-button>
                   </ng-container>
