feat: close #8 商機歷程紀錄

--- a/src/app/views/features/lead/view-lead/view-lead.component.html
+++ b/src/app/views/features/lead/view-lead/view-lead.component.html
@@ -185,7 +185,7 @@
                 <ng-template pTemplate="caption">
                   <div class="flex justify-content-between">
                     <div class="justify-content-start mt-2">
-                      <label>聯絡人歷程紀錄</label>
+                      <label>線索歷程紀錄</label>
                     </div>
                   </div>
                 </ng-template>
