--- a/src/app/views/features/opportunity/view-opportunity/view-opportunity.component.html
+++ b/src/app/views/features/opportunity/view-opportunity/view-opportunity.component.html
@@ -170,6 +170,34 @@
             <p-tabPanel header="活動">
               <h3>(待完成)</h3>
             </p-tabPanel>
+            <p-tabPanel header="歷程紀錄">
+              <p-table [rowsPerPageOptions]="[5, 10, 15]" (onLazyLoad)="loadTable($event)"
+                       [value]="GetOpportunityHistoricalRecords"
+                       [totalRecords]="totalHistorical" [showCurrentPageReport]="true" [lazy]="true"
+                       [paginator]="true" [rows]="5" currentPageReportTemplate="共 {totalRecords} 筆">
+                <ng-template pTemplate="caption">
+                  <div class="flex justify-content-between">
+                    <div class="justify-content-start mt-2">
+                      <label>商機歷程紀錄</label>
+                    </div>
+                  </div>
+                </ng-template>
+                <ng-template pTemplate="header">
+                  <tr>
+                    <th>修改日期</th>
+                    <th>使用者</th>
+                    <th>描述</th>
+                  </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-account_log>
+                  <tr>
+                    <td>{{ account_log.modified_at|date:'yyyy-MM-dd HH:mm' }}</td>
+                    <td>{{ account_log.modified_by }}</td>
+                    <td>{{ account_log.description }}</td>
+                  </tr>
+                </ng-template>
+              </p-table>
+            </p-tabPanel>
           </p-tabView>
         </p-card>
       </form>
