--- a/src/app/views/features/order/view-order/view-order.component.html
+++ b/src/app/views/features/order/view-order/view-order.component.html
@@ -77,19 +77,19 @@
                       <ng-container *ngIf="stage =='草稿'">
                         <p-button icon="pi pi-plus" pTooltip="新增商品" (click)="addProduct()" tooltipPosition="top"
                                   styleClass="p-button-text"></p-button>
-                      </ng-container>
                       <p-button icon="pi pi-pencil" pTooltip="編輯所有訂單商品" (click)="editAllProduct()"
                                 tooltipPosition="top"
                                 styleClass="p-button-text"></p-button>
                       <p-button icon="pi pi-trash" pTooltip="刪除所選商品/服務" (click)="deleteOrderProductRequest()"
                                 tooltipPosition="top"
                                 styleClass="p-button-text"></p-button>
+                      </ng-container>
                     </div>
                   </div>
                 </ng-template>
                 <ng-template pTemplate="header">
                   <tr>
-                    <th style="width: 4rem">
+                    <th style="width: 4rem" *ngIf="stage =='草稿'" >
                       <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
                     </th>
                     <th>名稱</th>
@@ -103,8 +103,8 @@
                 </ng-template>
                 <ng-template pTemplate="body" let-order_product>
                   <tr>
-                    <td>
-                      <p-tableCheckbox [value]="order_product"></p-tableCheckbox>
+                    <td *ngIf="stage =='草稿'">
+                      <p-tableCheckbox [value]="order_product" ></p-tableCheckbox>
                     </td>
                     <td>{{ order_product.product_name }}</td>
                     <td>{{ order_product.standard_price }}</td>
@@ -113,7 +113,7 @@
                     <td>{{ order_product.quantity }}</td>
                     <td>{{ order_product.sub_total }}</td>
                     <td>
-                      <div class="flex justify-content-end">
+                      <div class="flex justify-content-end" *ngIf="stage =='草稿'">
                         <p-button icon="pi pi-pencil" pTooltip="編輯" tooltipPosition="top" (click)="editOneProduct(order_product)"
                                   styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
                         <p-button icon="pi pi-trash" styleClass="p-button-rounded p-button-secondary p-button-text"
@@ -124,7 +124,7 @@
                 </ng-template>
               </p-table>
             </p-tabPanel>
-            <p-tabPanel header="詳細資料">
+            <p-tabPanel header="訂單">
               <div class="grid">
                 <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
@@ -210,8 +210,10 @@
               </div>
               <div class="flex justify-content-end">
                 <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
+                <ng-container *ngIf="stage !== '啟動中'">
                 <p-button label="儲存" (click)="patchOrderRequest()"
                           styleClass="p-button-info"></p-button>
+                </ng-container>
               </div>
             </p-tabPanel>
             <p-tabPanel header="歷程記錄">
