--- a/src/app/views/features/order/view-order/view-order.component.html
+++ b/src/app/views/features/order/view-order/view-order.component.html
@@ -217,7 +217,7 @@
               </div>
             </p-tabPanel>
             <p-tabPanel header="歷程記錄">
-                <p-table [rowsPerPageOptions]="[5, 10, 15]" [lazy]="true" [value]="order_log">
+                <p-table [rowsPerPageOptions]="[5, 10, 15]" [lazy]="true" [value]="GetOrderHistoricalRecords">
                   <ng-template pTemplate="caption">
                     <div class="flex justify-content-between">
                       <div class="justify-content-start mt-2">
@@ -234,9 +234,9 @@
                   </ng-template>
                   <ng-template pTemplate="body" let-order_log>
                     <tr>
-                      <td>{{ order_log.date }}</td>
-                      <td>{{ order_log.user }}</td>
-                      <td>{{ order_log.status }}</td>
+                      <td>{{ order_log.modified_at }}</td>
+                      <td>{{ order_log.modified_by }}</td>
+                      <td>{{ order_log.description }}</td>
                     </tr>
                   </ng-template>
                 </p-table>
